--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "scripts": {
     "build": "tsc",
+    "lint": "tsc --noEmit",
+    "format": "prettier -w src",
     "test": "vitest",
     "test:run": "vitest run"
   },
@@ -23,9 +25,28 @@
     "@noble/secp256k1": "^3.0.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^24.9.1",
+    "prettier": "^3.5.3",
     "typescript": "^5.9.3",
     "vite": "^7.1.12",
     "vitest": "^4.0.2"
+  },
+  "prettier": {
+    "importOrder": [
+      "^react$",
+      "^react-dom(.*)$",
+      "^react(.*)$",
+      "^@(?!(/))(.*)$",
+      "^(?!@|[.])(.*)$",
+      "^@(/)(.*)$",
+      "^[./]"
+    ],
+    "importOrderSeparation": true,
+    "importOrderSortSpecifiers": true,
+    "plugins": [
+      "@trivago/prettier-plugin-sort-imports"
+    ]
   }
+
 }
