--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@wisehodl/roots",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A minimal Nostr protocol library for typescript",
+  "license": "MIT",
   "exports": {
     "./events": {
       "import": "./dist/events/index.js",
